# pomgen

./: .gitignore  .pomgenrc  .poppyrc  BUILD  CLAUDE.md  LICENSE.txt  MODULE.bazel  README.md  WORKSPACE  antlr_install.json  maven_install.json  pomgen.py  query.py  query_maven_metadata.py  update.py  update_maven_metadata.py
.github/workflows/: ci.yml
common/: argsupport.py  code.py  common.py  instancequery.py  logger.py  maveninstallinfo.py  mdfiles.py  os_util.py  overridefileinfo.py  pomgenmode.py  version.py  version_increment_strategy.py
config/: config.py  pom_template.xml
crawl/: artifactprocessor.py  bazel.py  buildpom.py  crawler.py  dependency.py  dependencymd.py  git.py  libaggregator.py  pom.py  pomcontent.py  pomparser.py  pomproperties.py  releasereason.py  workspace.py
docs/: bazel_maven_workflow.md  change_detection.md  ci.md  config.md  java.md  mdfiles.md
example/: README.md
example/healthyfoods/fruit-api/: BUILD
example/healthyfoods/fruit-api/MVN-INF/: BUILD.pom
example/juicer/: BUILD
example/wintervegetables/: BUILD
example/wintervegetables/MVN-INF/: BUILD.pom
examples/compile-only-dependencies/: README.md
examples/compile-only-dependencies/coollib/: BUILD
examples/compile-only-dependencies/coollib/MVN-INF/: BUILD.pom
examples/compile-only-dependencies/fancy/: BUILD
examples/dep-overrides/: BUILD  README.md
examples/dep-overrides/MVN-INF/: BUILD.pom
examples/dependency-management/: README.md
examples/dependency-management/healthyfoods/vegetable-api/: BUILD
examples/dependency-management/juicer/: BUILD
examples/dependency-management/wintervegetables/: BUILD
examples/hello-world/: README.md
examples/hello-world/juicer/: BUILD
examples/hello-world/wintervegetables/: BUILD
examples/java-import/: README.md
examples/java-import/oldfruit/: BUILD
examples/java-import/oldfruitlover/: BUILD
examples/java/compile-only-dependencies/: README.md
examples/java/dep-overrides/: BUILD  README.md  overrides.bzl
examples/java/dependency-management/: README.md
examples/java/hello-world/: README.md  update_release_metadata.sh
examples/java/java-binary/: BUILD  README.md
examples/java/java-import/: README.md
examples/java/maven_install/: maven_install.json  poppy_antlr_install.json  poppy_mvn_install.json
examples/java/skip-artifact-generation/: README.md
examples/java_import/: README.md
examples/java_import/oldfruit/: BUILD
examples/java_import/oldfruitlover/: BUILD
examples/js/: package.json  package_template.json  pnpm-lock.yaml  pnpm-workspace.yaml
examples/js/docs/: packaging.md
examples/js/hello-world/: README.md
examples/maven_install/: antlr_install.json  maven_install.json
examples/override-deps/: .pomgenrc  BUILD  README.md  overide.bzl
examples/python/: pyproject_template.toml
examples/python/111/: BUILD  README.md
examples/python/empty/: README.md
examples/python/hello-world/: BUILD  README.md
examples/python/pip/: BUILD  requirements.in  requirements_lock.txt
examples/skip-artifact-generation/: README.md
examples/skip-artifact-generation/lib/: BUILD
examples/skip-artifact-generation/lib1/: BUILD
examples/skip-artifact-generation/lib1_transitives/: BUILD
examples/skip-artifact-generation/lib2/: BUILD
examples/skip-artifact-generation/passthrough/: BUILD
maven/: BUILD  README.md  maven.sh  maven_functions.sh
misc/: BUILD  README.md  all_third_party_deps_pom.py  configvalueloader.py  extdeps_pomgen.py
misc/tests/: BUILD  configvalueloadertest.py  extdeps_pomgentest.py
package/: README.md
package/maven/: README.md  maven.sh  maven_functions.sh
package/py/: BUILD  README.md  py.sh
pomupdate/: __init__.py  buildpomupdate.py
src/: generate_manifest.py  info.py  pomgen.py  query.py  update.py
src/common/: __init__.py  argsupport.py  buildpomupdate.py  code.py  common.py  genmode.py  instancequery.py  label.py  manifestcontent.py  mdfiles.py  metadataupdate.py  pomgenmode.py  version.py  version_increment_strategy.py
src/config/: config.py  exclusions.py  pom_template.xml
src/crawl/: artifactgenctx.py  artifactprocessor.py  bazel.py  buildpom.py  crawler.py  dependency.py  dependencymd.py  git.py  libaggregator.py  pom.py  pomparser.py  releasereason.py  workspace.py
src/generate/: __init__.py  generationstrategyfactory.py
src/generate/impl/: pomgenerationstrategy.py  pygenerationstrategy.py
src/packagemanager/: nexus.py
src/pomupdate/: buildpomupdate.py
src/refactor/: refactor.py
tests/: BUILD  argsupporttest.py  artifactprocessortest.py  bazeltest.py  buildpomtest.py  buildpomupdatetest.py  codetest.py  configtest.py  crawlertest.py  crawlertest_misc.py  crawlerunittest.py  dependencymdtest.py  dependencytest.py  instancequerytest.py  labeltest.py  libaggregatortest.py  maveninstallinfotest.py  mdfilestest.py  overridefileinfotest.py  pomgentest.py  pomparsertest.py  pompropertiestest.py  pomtest.py  querytest.py  version_increment_strategy_test.py  versiontest.py  workspacetest.py
tests/common/: argsupporttest.py  buildpomupdatetest.py  codetest.py  labeltest.py  metadataupdatetest.py  version_increment_strategy_test.py
tests/config/: configtest.py
tests/crawl/: BUILD  artifactprocessortest.py  bazeltest.py  buildpomtest.py  crawlertest.py  crawlertest_misc.py  crawlerunittest.py  libaggregatortest.py  workspacetest.py
tests/examples_goldfiles/: README.md  external_dependencies.json  libraries_release_plan.json  libraries_release_plan_json  run_goldfiles_test.sh
tests/examples_goldfiles/examples/python/111/communicator/caller/: pyproject.toml
tests/examples_goldfiles/examples/python/hello-world/: pyproject.toml
tests/examples_goldfiles/examples/python/hello-world/computer/: pyproject.toml
tests/examples_goldfiles/examples/python/hello-world/computer/md/: pyproject.toml.released
tests/examples_goldfiles/examples/python/hello-world/greeter/: pyproject.toml
tests/generate/impl/: pomgenerationstrategytest.py
tests/packagemanager/: BUILD  nexustest.py
tools/pip/: requirements_lock.txt
update/: buildpomupdate.py
(+229 files in other folders)
