bazel_dep(name = "aspect_rules_py", version = "1.2.1")
bazel_dep(name = "rules_python", version = "0.29.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.11",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//tools/pip:requirements_lock.txt",
)
use_repo(pip, "pip")
pip.parse(
    hub_name = "examples_pip",
    python_version = "3.11",
    requirements_lock = "//examples/python/pip:requirements_lock.txt",
)
use_repo(pip, "examples_pip")
