module(
    name = "pomgen",
    repo_name = "poppy",
)

bazel_dep(name = "aspect_rules_py", version = "1.2.1")
bazel_dep(name = "rules_python", version = "0.29.0")
bazel_dep(name = "rules_java", version = "7.12.5")
bazel_dep(name = "rules_jvm_external", version = "6.10")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.11",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//tools/pip:requirements_lock.txt",
)
use_repo(pip, "pip")
pip.parse(
    hub_name = "examples_pip",
    python_version = "3.11",
    requirements_lock = "//examples/python/pip:requirements_lock.txt",
)
use_repo(pip, "examples_pip")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

# regen lock file: REPIN=1 bazel run @poppy_mvn//:pin
maven.install(
    name = "poppy_mvn",
    artifacts = [
        "com.google.guava:guava:33.4.8-jre",
        "org.apache.commons:commons-lang3:3.18.0",
        "org.apache.commons:commons-math3:3.6.1",
        "org.antlr:ST4:4.0.7",
    ],
    lock_file = "//examples/java/maven_install:poppy_mvn_install.json",
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
    resolve_timeout = 1800,
    strict_visibility = False,
    version_conflict_policy = "pinned",
)

maven.amend_artifact(
    name = "poppy_mvn",
    coordinates = "com.google.guava:guava",
    exclusions = [
        "*:*",
    ],
)

maven.amend_artifact(
    name = "poppy_mvn",
    coordinates = "org.antlr:ST4",
    exclusions = [
        "antlr:antlr",
    ],
)

# regen lock file: REPIN=1 bazel run @poppy_antlr//:pin
maven.install(
    name = "poppy_antlr",
    artifacts = [
        "org.antlr:ST4:4.0.7",
        "antlr:antlr:2.7.6",
    ],
    lock_file = "//examples/java/maven_install:poppy_antlr_install.json",
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
    resolve_timeout = 1800,
    strict_visibility = True,
    version_conflict_policy = "pinned",
)

use_repo(maven, "poppy_mvn", "poppy_antlr")
