[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-python-lib"
version = "0.0.1"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.37.3",
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]